# blu-os

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Checklist.md  Doxyfile  README.md  TODO.md
.github/actions/: generate-docs.yml
cmake/: amd64-elf.cmake  i386-elf.cmake
docs/html/: annotated.html  annotated_dup.js  cdefs_8h_source.html  classes.html  dir_000000_000017.html  dir_000001_000017.html  dir_000002_000017.html  dir_000003_000017.html  dir_000004_000017.html  dir_000005_000017.html  dir_000006_000017.html  dir_000007_000017.html  dir_000008_000017.html  dir_000010_000017.html  dir_000012_000017.html  dir_000013_000017.html  dir_000015_000017.html  dir_000016_000017.html  dir_000018_000017.html  dir_000020_000017.html  dir_000022_000017.html  dir_000023_000011.html  dir_000024_000011.html  dir_000026_000011.html  dir_000028_000017.html  dir_000029_000017.html  dir_000030_000017.html  dir_000031_000017.html  dir_009f605b833ac4622acd6c3c0c26c0f0.html  dir_009f605b833ac4622acd6c3c0c26c0f0.js  dir_009f605b833ac4622acd6c3c0c26c0f0_dep.map  dir_009f605b833ac4622acd6c3c0c26c0f0_dep.md5  dir_0951739880926415d340e236892657d5.html  dir_0951739880926415d340e236892657d5.js  dir_0951739880926415d340e236892657d5_dep.map  dir_0951739880926415d340e236892657d5_dep.md5  dir_1f2704b796cd10d37e001b780f19bfce.html  dir_1f2704b796cd10d37e001b780f19bfce.js  dir_1f2704b796cd10d37e001b780f19bfce_dep.map  dir_1f2704b796cd10d37e001b780f19bfce_dep.md5  (+137 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_1.js  files_1.js  pages_1.js  pages_2.js  pages_6.js  searchdata.js
docs/latex/: annotated.tex  cdefs_8h_source.tex  files.tex  gdt_8h_source.tex  idt_8h_source.tex  index.tex  io_8h_source.tex  limits_8h.tex  limits_8h_source.tex  paging_8h_source.tex  physicalmemorymanager_8h_source.tex  pic_8h_source.tex  refman.tex  stdarg_8h.tex  stdarg_8h_source.tex  stdbool_8h.tex  stdbool_8h_source.tex  stddef_8h.tex  stddef_8h__dep__incl.md5  stddef_8h__incl.md5  stddef_8h_source.tex  stdint_8h.tex  stdint_8h__dep__incl.md5  stdint_8h_source.tex  stdio_8h_source.tex  stdlib_8h_source.tex  string_8h_source.tex  structGDT.tex  struct____attribute____.tex  tty_8h_source.tex  vga_8h_source.tex  virtualmemorymanager_8h_source.tex
include/drivers/: vga.h
include/lib/: stdio.h
iso/boot/grub/: blu_os.kernel64  grub.cfg
iso/grub/: grub.cfg
kernel/: CMakeLists.txt
kernel/include/arch/: kal.h
kernel/include/arch/i386/gdt/: gdt.h
kernel/include/arch/i386/idt/: idt.h
kernel/include/arch/i386/io/: io.h
kernel/include/arch/i386/mmu/: paging.h  physicalmemorymanager.h  virtualmemorymanager.h
kernel/include/arch/i386/pic/: pic.h
kernel/include/arch/x86/amd64/gdt/: gdt.h
kernel/include/arch/x86/amd64/idt/: idt.h
kernel/include/arch/x86/i386/mmu/: virtualmemorymanager.h
kernel/include/drivers/: vga.h
kernel/include/kernel/libk/: panic.h  stdio.h  stdlib.h  string.h
kernel/include/kernel/mm/: heap.h  slab.h
kernel/include/kernel/tty/: tty.h
kernel/src/arch/i386/: boot.s  boot.s.broken  crtn.s  linker.ld  linker.ld.broken
kernel/src/arch/i386/gdt/: gdt.c  gdtflush.s
kernel/src/arch/i386/idt/: idt.c  idtstubs.s
kernel/src/arch/i386/mmu/: paging.c  paging.s  physicalmemorymanager.c  virtualmemorymanager.c
kernel/src/arch/i386/pic/: irqstubs.s
kernel/src/arch/x86/amd64/: boot.s  crti.s  kal.c  linker.ld
kernel/src/arch/x86/amd64/boot/: boot.s  crtn.s
kernel/src/arch/x86/amd64/gdt/: gdt.c  gdtflush.s
kernel/src/arch/x86/amd64/idt/: idt.c  idtstubs.s
kernel/src/arch/x86/amd64/io/: io.c
kernel/src/arch/x86/i386/: kal.c
kernel/src/arch/x86/i386/boot/: linker.ld
kernel/src/arch/x86/i386/gdt/: gdt.c
kernel/src/arch/x86/i386/idt/: idt.c
kernel/src/arch/x86/i386/io/: io.c
kernel/src/arch/x86/i386/mmu/: physicalmemorymanager.c  virtualmemorymanager.c
kernel/src/arch/x86/i386/pic/: pic.c
kernel/src/drivers/: vga.c
kernel/src/kernel/: kernel.c  panic.c
kernel/src/kernel/libk/: panic.c
kernel/src/kernel/libk/stdio/: kprintf.c  kputchar.c
kernel/src/kernel/libk/stdlib/: kfree.c  kmalloc.c
kernel/src/kernel/libk/string/: strlen.c
kernel/src/kernel/mm/: heap.c  slab.c
kernel/src/kernel/tty/: tty.c
libc/: CMakeLists.txt  TODO.md
libc/include/: float.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/src/stdio/: printf.c  putchar.c  puts.c  vprintf.c
libc/src/stdlib/: abort.c
libc/src/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
scripts/: build-amd64-iso.sh  build-amd64.sh  build-i386-iso.sh  build-i386.sh  build-iso.sh
src/arch/i386/: boot.s  linker.ld
src/drivers/: vga.c
src/kernel/: crti.s  kernel.c
src/lib/: stdio.c
